--- a/pom.xml
+++ b/pom.xml
@@ -41,4 +41,10 @@
         </dependency>
     </dependencies>
 
+    <dependency>
+        <groupId>org.testng</groupId>
+        <artifactId>testng</artifactId>
+        <version>7.6.0</version>
+    </dependency>
+
 </project>
